@@ -56,6 +56,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23171: csv.Writer.writerow() now supports arbitrary iterables.
+
 - Issue #23745: The new email header parser now handles duplicate MIME
   parameter names without error, similar to how get_param behaves.
 
